refactor(release-notes): text

--- a/src/app/release-notes.json
+++ b/src/app/release-notes.json
@@ -6,7 +6,7 @@
     { "text": "Редактирование и удаление записей через детальную страницу категории." }
   ],
   "bugFixes": [
-    { "text": "Исправлена навигация при удалении категории;" },
+    { "text": "Навигация при удалении категории;" },
     { "text": "Некорректное отображение даты последней редактируемой записи;" },
     { "text": "Утечка памяти."}
   ],
