refactor(app): release note text

--- a/src/app/release-notes.json
+++ b/src/app/release-notes.json
@@ -1,6 +1,14 @@
 {
-  "releases": ["1.2.1", "1.2.0"],
+  "releases": ["1.2.2", "1.2.1", "1.2.0"],
   "releaseNotes": {
+    "1.2.2": {
+      "features": [],
+      "bugFixes": [],
+      "improvements": [
+        { "text": "Увеличен размер текста заметок;" },
+        { "text": "Уменьшена ширина колонки с номером строки." }
+      ]
+    },
     "1.2.1": {
       "features": [],
       "bugFixes": [],
