--- a/src/app/release-notes.json
+++ b/src/app/release-notes.json
@@ -1,6 +1,19 @@
 {
-  "releases": ["1.2.2", "1.2.1", "1.2.0"],
+  "releases": ["1.3.0", "1.2.2", "1.2.1", "1.2.0"],
   "releaseNotes": {
+    "1.3.0": {
+      "features": [
+        { "text": "Переписан компонент навигации;" },
+        { "text": "Диалог удаления для категорий и записей;" },
+        { "text": "Добавлена возможность выбора иконок для категорий." }
+      ],
+      "bugFixes": [],
+      "improvements": [
+        { "text": "Иконки контекстного меню;" },
+        { "text": "Шрифт диалога создания и редактирования;" },
+        { "text": "Валидация числовых полей в диалоге создания и редактирования." }
+      ]
+    },
     "1.2.2": {
       "features": [],
       "bugFixes": [],
