feat(app): version update

--- a/src/app/release-notes.json
+++ b/src/app/release-notes.json
@@ -1,6 +1,15 @@
 {
-  "releases": ["1.3.0", "1.2.2", "1.2.1", "1.2.0"],
+  "releases": ["1.3.1", "1.3.0"],
   "releaseNotes": {
+    "1.3.1": {
+      "features": [],
+      "bugFixes": [
+        { "text": "Ошибка при сохранении пустого поля 'Пробег';" },
+        { "text": "Обновление данных на странице списка категорий;" },
+        { "text": "Отсутствие анимации при раскрытии списка категорий." }
+      ],
+      "improvements": []
+    },
     "1.3.0": {
       "features": [
         { "text": "Переписан компонент навигации;" },
@@ -12,40 +21,6 @@
         { "text": "Иконки контекстного меню;" },
         { "text": "Шрифт диалога создания и редактирования;" },
         { "text": "Валидация числовых полей в диалоге создания и редактирования." }
-      ]
-    },
-    "1.2.2": {
-      "features": [],
-      "bugFixes": [],
-      "improvements": [
-        { "text": "Увеличен размер текста заметок;" },
-        { "text": "Уменьшена ширина колонки с номером строки." }
-      ]
-    },
-    "1.2.1": {
-      "features": [],
-      "bugFixes": [],
-      "improvements": [
-        { "text": "Изменение размера колонок в таблице записей;" },
-        { "text": "Кнопка закрытия диалога изменений приложения;" },
-        { "text": "Просмотр изменений в предыдущих версиях приложения." }
-      ]
-    },
-    "1.2.0": {
-      "features": [
-        { "text": "Уведомление об изменениях в приложении;" },
-        { "text": "Версия приложения в заголовке окна;" },
-        { "text": "Редактирование и удаление записей через детальную страницу категории." }
-      ],
-      "bugFixes": [
-        { "text": "Навигация при удалении категории;" },
-        { "text": "Некорректное отображение даты последней редактируемой записи;" },
-        { "text": "Утечка памяти."}
-      ],
-      "improvements": [
-        { "text": "Уменьшение размера колонки с номером;" },
-        { "text": "Выравнивание текста в таблице записей;" },
-        { "text": "Форматирование числовых значений в таблице записей." }
       ]
     }
   }
