feat(app): prepare for release

--- a/src/app/release-notes.json
+++ b/src/app/release-notes.json
@@ -1,27 +1,27 @@
 {
-  "releases": ["1.3.1", "1.3.0"],
+  "releases": ["2.0.0"],
   "releaseNotes": {
-    "1.3.1": {
-      "features": [],
-      "bugFixes": [
-        { "text": "Ошибка при сохранении пустого поля 'Пробег';" },
-        { "text": "Обновление данных на странице списка категорий;" },
-        { "text": "Отсутствие анимации при раскрытии списка категорий." }
-      ],
-      "improvements": []
-    },
-    "1.3.0": {
-      "features": [
-        { "text": "Переписан компонент навигации;" },
-        { "text": "Диалог удаления для категорий и записей;" },
-        { "text": "Добавлена возможность выбора иконок для категорий." }
-      ],
-      "bugFixes": [],
-      "improvements": [
-        { "text": "Иконки контекстного меню;" },
-        { "text": "Шрифт диалога создания и редактирования;" },
-        { "text": "Валидация числовых полей в диалоге создания и редактирования." }
-      ]
+    "2.0.0": {
+      "ru": {
+        "features": [
+          { "text": "Меню настроек;" },
+          { "text": "Ссылка на репозиторий приложения;" },
+          { "text": "Поддержка нескольких языков и регионов;" },
+          { "text": "Переработан дизайн в соответствии со стилями Ubuntu." }
+        ],
+        "bugFixes": [],
+        "improvements": []
+      },
+      "en": {
+        "features": [
+          { "text": "Settings menu;" },
+          { "text": "Multilanguage support;" },
+          { "text": "Link to the repository of application;"},
+          { "text": "Redesigned to match Ubuntu styles." }
+        ],
+        "bugFixes": [],
+        "improvements": []
+      }
     }
-  }
+}
 }
