--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "car-maintenance",
-  "version": "2.3.0",
+  "version": "2.4.0",
   "description": "App for log your car parts maintenance such as engine, oil and any what you want! Manage cost, date and mileage.",
   "homepage": "https://github.com/mkinitcpio/car-maintenance",
   "author": {
@@ -45,6 +45,7 @@
     "@angular/cdk": "12.2.11",
     "@angular/forms": "^12.2.11",
     "@angular/material": "12.2.11",
+    "@electron/remote": "1.2.0",
     "@ngrx/effects": "12.5.0",
     "@ngrx/store": "12.5.0",
     "@ngrx/store-devtools": "12.5.0",
@@ -72,7 +73,7 @@
     "@types/jasmine": "3.6.2",
     "@types/jasminewd2": "2.0.8",
     "@types/mocha": "8.0.4",
-    "@types/node": "12.12.6",
+    "@types/node": "16.11.3",
     "@typescript-eslint/eslint-plugin": "4.7.0",
     "@typescript-eslint/eslint-plugin-tslint": "4.7.0",
     "@typescript-eslint/parser": "4.7.0",
@@ -80,7 +81,7 @@
     "conventional-changelog-cli": "2.1.1",
     "core-js": "3.6.5",
     "cross-env": "7.0.2",
-    "electron": "15.3.0",
+    "electron": "13.1.7",
     "electron-builder": "22.13.1",
     "electron-reload": "1.5.0",
     "eslint": "7.13.0",
