--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "car-maintenance",
-  "version": "2.3.0",
+  "version": "2.4.0",
   "description": "App for log your car parts maintenance such as engine, oil and any what you want! Manage cost, date and mileage.",
   "homepage": "https://github.com/mkinitcpio/car-maintenance",
   "author": {
@@ -41,39 +41,39 @@
     "lint": "ng lint"
   },
   "dependencies": {
-    "@angular/animations": "^11.0.0",
-    "@angular/cdk": "11.0.3",
-    "@angular/forms": "^11.0.0",
-    "@angular/material": "11.0.3",
-    "@ngrx/effects": "10.1.2",
-    "@ngrx/store": "10.1.2",
-    "@ngrx/store-devtools": "10.1.2",
+    "@angular/animations": "^12.2.11",
+    "@angular/cdk": "12.2.11",
+    "@angular/forms": "^12.2.11",
+    "@angular/material": "12.2.11",
+    "@electron/remote": "1.2.0",
+    "@ngrx/effects": "12.5.0",
+    "@ngrx/store": "12.5.0",
+    "@ngrx/store-devtools": "12.5.0",
     "uuid": "8.3.1"
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "10.0.1",
-    "@angular-devkit/build-angular": "0.1100.3",
-    "@angular-eslint/builder": "0.8.0-beta.3",
-    "@angular-eslint/eslint-plugin": "0.8.0-beta.3",
-    "@angular-eslint/eslint-plugin-template": "0.8.0-beta.3",
-    "@angular-eslint/schematics": "0.8.0-beta.3",
-    "@angular-eslint/template-parser": "0.8.0-beta.3",
-    "@angular/cli": "11.0.3",
-    "@angular/common": "11.0.3",
-    "@angular/compiler": "11.0.3",
-    "@angular/compiler-cli": "11.0.3",
-    "@angular/core": "11.0.3",
-    "@angular/forms": "11.0.3",
-    "@angular/language-service": "11.0.3",
-    "@angular/platform-browser": "11.0.3",
-    "@angular/platform-browser-dynamic": "11.0.3",
-    "@angular/router": "11.0.3",
+    "@angular-devkit/build-angular": "12.2.10",
+    "@angular-eslint/builder": "12.5.0",
+    "@angular-eslint/eslint-plugin": "12.5.0",
+    "@angular-eslint/eslint-plugin-template": "12.5.0",
+    "@angular-eslint/schematics": "12.5.0",
+    "@angular-eslint/template-parser": "12.5.0",
+    "@angular/cli": "12.2.11",
+    "@angular/common": "12.2.11",
+    "@angular/compiler": "12.2.11",
+    "@angular/compiler-cli": "12.2.11",
+    "@angular/core": "12.2.11",
+    "@angular/language-service": "12.2.11",
+    "@angular/platform-browser": "12.2.11",
+    "@angular/platform-browser-dynamic": "12.2.11",
+    "@angular/router": "12.2.11",
     "@ngx-translate/core": "13.0.0",
     "@ngx-translate/http-loader": "6.0.0",
     "@types/jasmine": "3.6.2",
     "@types/jasminewd2": "2.0.8",
     "@types/mocha": "8.0.4",
-    "@types/node": "12.12.6",
+    "@types/node": "16.11.3",
     "@typescript-eslint/eslint-plugin": "4.7.0",
     "@typescript-eslint/eslint-plugin-tslint": "4.7.0",
     "@typescript-eslint/parser": "4.7.0",
@@ -81,8 +81,8 @@
     "conventional-changelog-cli": "2.1.1",
     "core-js": "3.6.5",
     "cross-env": "7.0.2",
-    "electron": "11.1.0",
-    "electron-builder": "22.9.1",
+    "electron": "13.1.7",
+    "electron-builder": "22.13.1",
     "electron-reload": "1.5.0",
     "eslint": "7.13.0",
     "eslint-plugin-import": "2.22.1",
@@ -90,7 +90,7 @@
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jasmine-core": "3.6.0",
     "jasmine-spec-reporter": "6.0.0",
-    "karma": "~5.1.0",
+    "karma": "~6.3.5",
     "karma-coverage-istanbul-reporter": "3.0.3",
     "karma-electron": "6.3.1",
     "karma-jasmine": "4.0.1",
@@ -98,13 +98,12 @@
     "mocha": "8.2.1",
     "npm-run-all": "4.1.5",
     "rxjs": "6.6.3",
-    "spectron": "13.0.0",
     "ts-node": "9.1.0",
     "tslib": "2.0.3",
-    "typescript": "4.0.5",
+    "typescript": "4.3.5",
     "wait-on": "5.0.1",
     "webdriver-manager": "12.1.7",
-    "zone.js": "0.10.3"
+    "zone.js": "0.11.4"
   },
   "engines": {
     "node": ">=10.13.0"
