feat(print-dialog): implement pdf export

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,11 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    "baseUrl": "./src",
+    "paths": {
+      "@shared/*": ["app/shared/*"],
+      "@core/*": ["app/core/*"],
+    },
     "typeRoots": [
       "node_modules/@types"
     ],
