fix(preview-page): currency error

--- a/src/app/release-notes.json
+++ b/src/app/release-notes.json
@@ -1,6 +1,22 @@
 {
-  "releases": ["2.6.0", "2.5.0", "2.4.0", "2.3.0", "2.2.1", "2.2.0", "2.1.0", "2.0.0"],
+  "releases": ["2.6.1", "2.6.0", "2.5.0", "2.4.0", "2.3.0", "2.2.1", "2.2.0", "2.1.0", "2.0.0"],
   "releaseNotes": {
+    "2.6.1": {
+      "en": {
+        "features": [],
+        "bugFixes": [
+          {"text": "Export to PDF."}
+        ],
+        "improvements": []
+      },
+      "ru": {
+        "features": [],
+        "bugFixes": [
+          {"text": "Экспорт в PDF."}
+        ],
+        "improvements": []
+      }
+    },
     "2.6.0": {
       "ru": {
         "features": [
