--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/material-icons/iconfont/material-icons.css",
               "src/styles.scss"
             ],
             "scripts": [],
