--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@ngrx/effects": "12.5.0",
     "@ngrx/store": "12.5.0",
     "@ngrx/store-devtools": "12.5.0",
+    "material-icons": "1.10.6",
     "uuid": "8.3.1"
   },
   "devDependencies": {
