--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "car-maintenance",
-  "version": "4.0.1",
+  "version": "4.1.0",
   "description": "App for log your car parts maintenance such as engine, oil and any what you want! Manage cost, date and mileage.",
   "homepage": "https://github.com/mkinitcpio/car-maintenance",
   "author": {
@@ -107,6 +107,6 @@
     "zone.js": "0.11.4"
   },
   "engines": {
-    "node": ">=10.13.0"
+    "node": ">=v14.18.1"
   }
 }
