--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "electron:serve": "wait-on tcp:4200 && npm run electron:serve-tsc && npx electron . --serve",
     "electron:local": "npm run build:prod && npx electron .",
     "electron:build-linux": "npm run build:prod && electron-builder --linux",
-    "electron:build-mac": "npm run build:prod && electron-builder -mac",
+    "electron:build-mac": "npm run build:prod && electron-builder --mac",
     "electron:build-windows": "npm run build:prod && electron-builder --windows",
     "test": "ng test --watch=false",
     "test:watch": "ng test",
@@ -52,6 +52,7 @@
     "@ngrx/store-devtools": "12.5.0",
     "app-builder": "7.0.4",
     "app-builder-bin": "4.1.2",
+    "electron-store": "8.1.0",
     "material-icons": "1.10.6",
     "uuid": "8.3.1"
   },
