--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "car-maintenance",
-  "version": "4.1.0",
+  "version": "4.2.0",
   "description": "App for log your car parts maintenance such as engine, oil and any what you want! Manage cost, date and mileage.",
   "homepage": "https://github.com/mkinitcpio/car-maintenance",
   "author": {
@@ -33,7 +33,9 @@
     "electron:serve-tsc": "tsc -p tsconfig.serve.json",
     "electron:serve": "wait-on tcp:4200 && npm run electron:serve-tsc && npx electron . --serve",
     "electron:local": "npm run build:prod && npx electron .",
-    "electron:build": "npm run build:prod && electron-builder -l",
+    "electron:build-linux": "npm run build:prod && electron-builder --linux",
+    "electron:build-mac": "npm run build:prod && electron-builder --mac",
+    "electron:build-windows": "npm run build:prod && electron-builder --windows",
     "test": "ng test --watch=false",
     "test:watch": "ng test",
     "e2e": "npm run build:prod && cross-env TS_NODE_PROJECT='e2e/tsconfig.e2e.json' mocha --timeout 300000 --require ts-node/register e2e/**/*.e2e.ts",
@@ -50,6 +52,7 @@
     "@ngrx/store-devtools": "12.5.0",
     "app-builder": "7.0.4",
     "app-builder-bin": "4.1.2",
+    "electron-store": "8.1.0",
     "material-icons": "1.10.6",
     "uuid": "8.3.1"
   },
