--- a/package.json
+++ b/package.json
@@ -42,74 +42,64 @@
     "lint": "ng lint"
   },
   "dependencies": {
-    "@angular/animations": "^12.2.11",
-    "@angular/cdk": "12.2.11",
-    "@angular/forms": "^12.2.11",
-    "@angular/material": "12.2.11",
-    "@electron/remote": "2.0.8",
-    "@ngrx/effects": "12.5.0",
-    "@ngrx/store": "12.5.0",
-    "@ngrx/store-devtools": "12.5.0",
+    "@angular/animations": "17.0.8",
+    "@angular/cdk": "17.0.4",
+    "@angular/common": "17.0.8",
+    "@angular/compiler": "17.0.8",
+    "@angular/core": "17.0.8",
+    "@angular/forms": "17.0.8",
+    "@angular/language-service": "17.0.8",
+    "@angular/material": "17.0.4",
+    "@angular/platform-browser": "17.0.8",
+    "@angular/platform-browser-dynamic": "17.0.8",
+    "@angular/router": "17.0.8",
+    "@electron/remote": "2.1.0",
+    "@ngrx/effects": "17.0.1",
+    "@ngrx/store": "17.0.1",
+    "@ngrx/store-devtools": "17.0.1",
     "app-builder": "7.0.4",
     "app-builder-bin": "4.1.2",
     "electron-store": "8.1.0",
     "material-icons": "1.10.6",
-    "uuid": "8.3.1"
+    "rxjs": "7.8.1",
+    "tslib": "2.6.2",
+    "uuid": "8.3.1",
+    "zone.js": "0.14.2"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "10.0.1",
-    "@angular-devkit/build-angular": "12.2.10",
-    "@angular-eslint/builder": "12.5.0",
-    "@angular-eslint/eslint-plugin": "12.5.0",
-    "@angular-eslint/eslint-plugin-template": "12.5.0",
-    "@angular-eslint/schematics": "12.5.0",
-    "@angular-eslint/template-parser": "12.5.0",
-    "@angular/cli": "12.2.11",
-    "@angular/common": "12.2.11",
-    "@angular/compiler": "12.2.11",
-    "@angular/compiler-cli": "12.2.11",
-    "@angular/core": "12.2.11",
-    "@angular/language-service": "12.2.11",
-    "@angular/platform-browser": "12.2.11",
-    "@angular/platform-browser-dynamic": "12.2.11",
-    "@angular/router": "12.2.11",
-    "@ngx-translate/core": "13.0.0",
-    "@ngx-translate/http-loader": "6.0.0",
-    "@types/jasmine": "3.6.2",
-    "@types/jasminewd2": "2.0.8",
-    "@types/mocha": "8.0.4",
-    "@types/node": "16.11.3",
-    "@typescript-eslint/eslint-plugin": "5.7.0",
-    "@typescript-eslint/eslint-plugin-tslint": "5.7.0",
-    "@typescript-eslint/parser": "5.7.0",
-    "chai": "4.2.0",
-    "core-js": "3.6.5",
-    "cross-env": "7.0.2",
-    "electron": "22.0.2",
-    "electron-builder": "23.3.3",
-    "electron-reload": "1.5.0",
-    "eslint": "7.32.0",
-    "eslint-plugin-import": "2.25.3",
-    "eslint-plugin-jsdoc": "37.2.0",
+    "@angular-builders/custom-webpack": "17.0.0",
+    "@angular-builders/jest": "17.0.0",
+    "@angular-devkit/build-angular": "17.0.8",
+    "@angular-eslint/builder": "17.1.1",
+    "@angular-eslint/eslint-plugin": "17.1.1",
+    "@angular-eslint/eslint-plugin-template": "17.1.1",
+    "@angular-eslint/schematics": "17.1.1",
+    "@angular-eslint/template-parser": "17.1.1",
+    "@angular/cli": "17.0.8",
+    "@angular/compiler-cli": "17.0.8",
+    "@ngx-translate/core": "15.0.0",
+    "@ngx-translate/http-loader": "8.0.0",
+    "@playwright/test": "1.40.1",
+    "@types/jest": "29.5.11",
+    "@types/node": "20.10.5",
+    "@typescript-eslint/eslint-plugin": "6.16.0",
+    "@typescript-eslint/parser": "6.16.0",
+    "conventional-changelog-cli": "3.0.0",
+    "electron": "27.2.0",
+    "electron-builder": "24.9.1",
+    "electron-debug": "3.2.0",
+    "electron-reloader": "1.2.3",
+    "eslint": "8.56.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-jsdoc": "46.9.1",
     "eslint-plugin-prefer-arrow": "1.2.3",
-    "jasmine-core": "3.6.0",
-    "jasmine-spec-reporter": "6.0.0",
-    "karma": "~6.3.5",
-    "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-electron": "6.3.1",
-    "karma-jasmine": "4.0.1",
-    "karma-jasmine-html-reporter": "1.5.4",
-    "mocha": "8.2.1",
+    "jest": "29.7.0",
+    "node-polyfill-webpack-plugin": "2.0.1",
     "npm-run-all": "4.1.5",
-    "rxjs": "6.6.3",
-    "ts-node": "9.1.0",
-    "tslib": "2.0.3",
-    "typescript": "4.3.5",
-    "wait-on": "5.0.1",
-    "webdriver-manager": "12.1.7",
-    "zone.js": "0.11.4"
-  },
-  "engines": {
-    "node": ">=v14.18.1"
+    "playwright": "1.40.1",
+    "ts-node": "10.9.2",
+    "typescript": "5.2.2",
+    "wait-on": "7.2.0",
+    "webdriver-manager": "12.1.9"
   }
 }
