--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "module": "es2020",
+    "module": "es2022",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
@@ -9,12 +9,13 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es5",
+    "target": "ES2022",
     "baseUrl": "./src",
     "paths": {
       "@shared/*": ["app/shared/*"],
       "@core/*": ["app/core/*"],
     },
+    "useDefineForClassFields": false,
     "typeRoots": [
       "node_modules/@types"
     ],
