--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "sourceMap": true,
     "declaration": false,
     "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -23,7 +24,8 @@
       "es2017",
       "es2016",
       "es2015",
-      "dom"
+      "dom",
+      "dom.iterable"
     ]
   },
   "files": [
