feat(#129): refactor release notes page and translation for kz users

--- a/src/app/release-notes.json
+++ b/src/app/release-notes.json
@@ -18,5 +18,15 @@
       "1": "Added missing picture",
       "2": "Added link to documentation"
     }
+  },
+  "kz": {
+    "settings": "Баптаулар",
+    "welcomePage": "Қош келдіңіз беті",
+    "dashboard": "Басқару тақтасы",
+    "progress": {
+      "0": "Баптаулардан Қараңғы немесе Жарық жағын таңдаңыз!",
+      "1": "Жоқ сурет қосылды",
+      "2": "Құжаттамаға сілтеме қосылды"
+    }
   }
 }
