chore(app): Prepared for 4.3.0 release

--- a/src/app/release-notes.json
+++ b/src/app/release-notes.json
@@ -1,32 +1,59 @@
 {
-  "ru": {
-    "settings": "Настройки",
-    "welcomePage": "Стартовая страница",
-    "dashboard": "Главная страница",
-    "progress": {
-      "0": "Выбери светлую или темную сторону в настройках!",
-      "1": "Добавлена отсутствующая иллюстрация",
-      "2": "Добавлен виджет документации"
-    }
-  },
-  "en": {
-    "settings": "Settings",
-    "welcomePage": "Welcome page",
-    "dashboard": "Dashboard page",
-    "progress": {
-      "0": "Choose Dark or Light Side in settings!",
-      "1": "Added missing picture",
-      "2": "Added link to documentation"
-    }
-  },
-  "kz": {
-    "settings": "Баптаулар",
-    "welcomePage": "Қош келдіңіз беті",
-    "dashboard": "Басқару тақтасы",
-    "progress": {
-      "0": "Баптаулардан Қараңғы немесе Жарық жағын таңдаңыз!",
-      "1": "Жоқ сурет қосылды",
-      "2": "Құжаттамаға сілтеме қосылды"
-    }
-  }
+  "ru": [{
+    "title": "Общее",
+    "news": [
+      "Небольшие косметические изменения в приложении;",
+      "Добавлен перевод на казахский язык;",
+      "Добавлена новая валюта: Тенге;",
+      "Для полей ввода пробег и валюта добавлены иллюстрации."
+    ]
+  },{
+    "title": "Таблица",
+    "news": [
+      "Обновление таблицы и функционала;",
+      "Добавлено скрытие колонок;",
+      "Добавлен экспорт в CSV;",
+      "Добавлена возможность выбора записей;",
+      "Добавлено удаление нескольких записей;",
+      "Добавлено перемещение записей между группами."
+    ]
+  }],
+  "en": [{
+    "title": "Common",
+    "news": [
+      "Small cosmetic changes in the application;",
+      "Added translation into Kazakh;",
+      "Added a new currency: Tenge;",
+      "Illustrations have been added to the mileage and currency input fields."
+    ]
+  },{
+    "title": "Table",
+    "news": [
+      "Updated table and functionality;",
+      "Added hiding columns;",
+      "Added export to CSV;",
+      "Added the ability to select records;",
+      "Added deleting multiple records;",
+      "Added moving records between groups."
+    ]
+  }],
+  "kz": [{
+    "title": "Жалпы",
+    "news": [
+        "Қосымшаға шағын косметикалық өзгерістер енгізілді;",
+        "Қосымшаға қазақ тіліне аударма қосылды;",
+        "Жаңа валюта қосылды: Теңге;",
+        "Жүгіріс және валюта өрістеріне иллюстрациялар қосылды."
+    ]
+    },{
+      "title": "Кесте",
+      "news": [
+        "Кесте және функционал жаңартылды;",
+        "Бағандарды жасыру қосылды;",
+        "CSV-ға экспорттау қосылды;",
+        "Жазбаларды таңдау мүмкіндігі қосылды;",
+        "Бірнеше жазбаларды жою қосылды;",
+        "Жазбаларды топтар арасында жылжыту қосылды."
+      ]
+    }]
 }
